added new font (circular)

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -45,7 +45,7 @@
 
             <!-- PARTIE D'INTRO -->
             <h2>Mes Applications Favorites</h2>
-                <p>À travers ce site je vais vous présenter mes 3 applications favorites, voici un déscriptif rapide de ces applis qui sont donc <span>Spotify</span>, <span>Youtube</span> et <span>Twitter</span></p>
+                <p>À travers ce site je vais vous présenter mes 3 applications favorites, voici un déscriptif rapide de ces applis qui sont donc <span class="spotify-color">Spotify</span>, <span class="youtube-color">Youtube</span> et <span class="twitter-color">Twitter</span> alias <span class="twitter-color">X</span></p>
             <!-- PARTIE D'INTRO -->
                 
                 
