the footer is done

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -139,7 +139,7 @@
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. reprehenderit. Tenetur, beatae ipsum quae aliquid nesciunt rem repellendus ab maxime saepe nisi. Rerum aspernatur provident repudiandae?</p>
 
-                <a class="button1" href="./index.html">button1</a>
+            <a class="button1" href="./index.html">Mes 3 Apps</a>
 
         </footer>        
         
