css of spotify is ended

--- a/HTML/spotify.html
+++ b/HTML/spotify.html
@@ -64,7 +64,7 @@
 
 
 
-
+            <hr>
 
 
             <section class="first-line-spotify">
@@ -84,16 +84,26 @@
 
 
 
-                <p>Voici un exmeple de ce a quoi ressemble la page avec nos playlists :</p>
-
-                <img src="../Image/librairy1.png" alt="">
-                <img src="../Image/librairy2.png" alt="">
+            <article class="two-phones-spotify">
+                <p>Voici un exmeple de ce à quoi ressemble la page avec nos playlists :</p>
 
 
+                <div class="phones-spotify">
+                    <img class=phone-1 src="../Image/librairy1.png" alt="">
+                    <img class=phone-2 src="../Image/librairy2.png" alt="">                
+                </div>
+            </article>
 
-                <p>Spotify est aussi une très bonne application pour décourvir de nouvelles musiques, en effet l'algorhitme de cette application est capable de nous proposer des morceaux en fonction de nos goûts musicaux !</p>
 
-                <img src="../Image/spotify algorithm.png" alt="">
+            <hr>
+
+
+                <article class="algo-spotify">
+                    <p>Spotify est aussi une très bonne application pour décourvir de nouvelles musiques, en effet l'algorhitme de cette application est capable de nous proposer des morceaux en fonction de nos goûts musicaux !</p>
+    
+                    <img class="algo-img" src="../Image/spotify algorithm.png" alt="">
+                </article>
+
 
 
 
