added links for each plateforms

--- a/HTML/twitter.html
+++ b/HTML/twitter.html
@@ -48,8 +48,7 @@
 
 
             
-            <p><h4 class="paragraph-twitter-blue">Pour mon usage personnel Twitter se révèle être très utile pour rester connecté à un flux continu d'actualités, d'opinions et de conversations en temps réel.</h4></p>
-
+            <p><h4 class="paragraph-twitter-blue">Pour mon usage personnel <a href="https://twitter.com/?lang=fr">Twitter</a> se révèle être très utile pour rester connecté à un flux continu d'actualités, d'opinions et de conversations en temps réel.</h4></p>
 
             <hr>
             
