--- a/HTML/youtube.html
+++ b/HTML/youtube.html
@@ -43,7 +43,7 @@
         <main>
 
                 <h2 class="slogan">'Broadcast Yourself'</h2>
-                <p><h4>J'utilise souvent Youtube pour différentes choses que ça soit pour me divertir ou même pour apprendre certaines choses car cette appli se révele être très utile pour trouver un tutoriel sur n'importe quel sujet voici quelques exemples plus précis :</h4></p>
+                <p><h4>J'utilise souvent <a href="https://www.youtube.com/?hl=FR">Youtube</a> pour différentes choses que ça soit pour me divertir ou même pour apprendre certaines choses car cette appli se révele être très utile pour trouver un tutoriel sur n'importe quel sujet voici quelques exemples plus précis :</h4></p>
 
 
 
